edicion del texto

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>40</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a rel="author" href="julian.ramirez2507@gmail.com/">julian.ramirez2507@gmail.com</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a rel="author" href="mailto:julian.ramirez2507@gmail.com/">julian.ramirez2507@gmail.com</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -188,7 +188,7 @@
             <div class="progress">
               <span class="skill">Project Management <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -213,7 +213,7 @@
             <div class="progress">
               <span class="skill">Artificial Intelligence <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -302,14 +302,27 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Maintenance and Modernization Supervisor</h4>
+              <h5>2007 - 2015; 2017 - 2018 </h5>
+              <p><b>Otis Elevator Company. Medellín, Colombia </b></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Supervise the preventive and corrective maintenance processes of elevators and escalators.</li>
+                <li>Manage and control technological modernization projects of elevators and escalators.</li>
+                <li>Manage projects for the installation of vertical transportation systems in new and existing buildings.</li>
+                <li>Created presentations and proposals a month for clients and account managers</li>
+                <li>Control budgets assigned for the development of maintenance processes.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>EH&S Supervisor</h4>
+              <h5>2015 - 2018</h5>
+              <p><b>Otis Elevator Company. Medellín, Colombia </b></p>
+              <ul>
+                <li>Enforce corporate policies and procedures related to health and safety environment.</li>
+                <li>Follow up on the development of the company's annual audit plan.</li>
+                <li>Develop training programs for technical and administrative personnel.</li>
+                <li>Follow up and manage contractor personnel in environmental, health and safety matters.</li>
+                <li>Participate in the coordination and implementation of management and quality assurance systems.</li>
               </ul>
             </div>
           </div>
