finalizo seccion estudios y experiencia

--- a/index.html
+++ b/index.html
@@ -186,23 +186,23 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Project Management <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Project Design <i class="val">80%</i></span>
+              <span class="skill">Project Management <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">50%</i></span>
+              <span class="skill">Project Design <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Python <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -211,23 +211,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Artificial Intelligence <i class="val">20%</i></span>
+              <span class="skill">Artificial Intelligence <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Maintenance Process <i class="val">90%</i></span>
+              <span class="skill">Maintenance Process <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Control And Automation <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -265,25 +265,27 @@
               <h4>Master in Computational Sciences &amp; Telecomunications</h4>
               <h5>2021 - 2023</h5>
               <p><em>Universidad Tecnológica Latinoamericana, México, CDMX</em></p>
-              <!--<p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>-->
+              <p>México, CDMX</p>
+              <p>The Master's degree in Computer Science and Telecommunications can be recognized in the U.S. with its equivalent: Master of Science in Information Technology and Electronic Technology
+                earned through distance education</p>
             </div>
             <div class="resume-item">
               <h4>Automation Specialist <!--&amp; Graphic Design</h4>-->
               <h5>2017 - 2018</h5>
               <p><em>Universidad Pontificia Bolivariana, Medellin, Colombia</em></p>
-              <!--<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>-->
+              <p>Degree work in Artificial Neural Network Application and control using fuzzy logic</p>
             </div>
             <div class="resume-item">
               <h4>Project Management Specialist <!--&amp; Graphic Design</h4>-->
               <h5>2011 - 2012</h5>
               <p><em>Fundación Universitaria Esumen, Medellin, Colombia</em></p>
-              <!--<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>-->
+              <p>The Project Management Specialist is able to formulate, evaluate and control the execution of public and private investment projects, by means of universally valid tools that allow to achieve competitive advantages in his own economic sector or in a sector close to his professional performance.</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Electronic Engineering <!--&amp; Graphic Design</h4> -->
               <h5>2000 - 2005</h5>
               <p><em>Universidad Nacional de Colombia, Manizales, Colombia</em></p>
-              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+              <p>Engineering program with depth study in Digital Signal Processing and telematic. Degree work in Digital Control Systems  </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -306,7 +308,7 @@
               <h5>2007 - 2015; 2017 - 2018 </h5>
               <p><b>Otis Elevator Company. Medellín, Colombia </b></p>
               <ul>
-                <li>Supervise the preventive and corrective maintenance processes of elevators and escalators.</li>
+                <li>Supervising the preventive and corrective maintenance processes of elevators and escalators.</li>
                 <li>Manage and control technological modernization projects of elevators and escalators.</li>
                 <li>Manage projects for the installation of vertical transportation systems in new and existing buildings.</li>
                 <li>Created presentations and proposals a month for clients and account managers</li>
@@ -319,9 +321,8 @@
               <p><b>Otis Elevator Company. Medellín, Colombia </b></p>
               <ul>
                 <li>Enforce corporate policies and procedures related to health and safety environment.</li>
-                <li>Follow up on the development of the company's annual audit plan.</li>
+                <li>Follow up on the development of the company's annual audit plan and manage contractor personnel in environmental, health and safety matters.</li>
                 <li>Develop training programs for technical and administrative personnel.</li>
-                <li>Follow up and manage contractor personnel in environmental, health and safety matters.</li>
                 <li>Participate in the coordination and implementation of management and quality assurance systems.</li>
               </ul>
             </div>
@@ -332,7 +333,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!--<section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -448,7 +449,8 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= --> 
+    <!--
     <section id="services" class="services">
       <div class="container">
 
@@ -498,7 +500,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2>References</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -509,7 +511,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  XXXXXXXXXXXXXXXXXXXXXXX Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
