--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!--<li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -266,7 +266,7 @@
               <h5>2021 - 2023</h5>
               <p><em>Universidad Tecnológica Latinoamericana, México, CDMX</em></p>
               <p>México, CDMX</p>
-              <p>The Master's degree in Computer Science and Telecommunications can be recognized in the U.S. with its equivalent: Master of Science in Information Technology and Electronic Technology
+              <p>Master's degree in Computer Science and Telecommunications can be recognized in the U.S. with its equivalent: Master of Science in Information Technology and Electronic Technology
                 earned through distance education</p>
             </div>
             <div class="resume-item">
@@ -279,7 +279,7 @@
               <h4>Project Management Specialist <!--&amp; Graphic Design</h4>-->
               <h5>2011 - 2012</h5>
               <p><em>Fundación Universitaria Esumen, Medellin, Colombia</em></p>
-              <p>The Project Management Specialist is able to formulate, evaluate and control the execution of public and private investment projects, by means of universally valid tools that allow to achieve competitive advantages in his own economic sector or in a sector close to his professional performance.</p>
+              <p>Project Management Specialist is able to formulate, evaluate and control the execution of public and private investment projects, by means of universally valid tools that allow to achieve competitive advantages in his own economic sector or in a sector close to his professional performance.</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Electronic Engineering <!--&amp; Graphic Design</h4> -->
@@ -299,7 +299,7 @@
                 <li>Formulate and evaluate technological improvement projects to modernize air navigation systems in Colombia.</li>
                 <li>Implement software and hardware solutions in aeronautical systems.</li>
                 <li>Implement solutions in aeronautical telecommunication and meteorology systems.</li>
-                <li>Follow up on management indicators, budget and progress in the execution of the entity's annual procurement plan.</li>
+                <li>Following up on management indicators, budget and progress in the execution of the entity's annual procurement plan.</li>
                 <li>Prepare quarterly reports to present to the CEO and Branch manager and support the quality area with the management of non-conformities.</li>
               </ul>
             </div>
@@ -311,7 +311,7 @@
                 <li>Supervising the preventive and corrective maintenance processes of elevators and escalators.</li>
                 <li>Manage and control technological modernization projects of elevators and escalators.</li>
                 <li>Manage projects for the installation of vertical transportation systems in new and existing buildings.</li>
-                <li>Created presentations and proposals a month for clients and account managers</li>
+                <li>Create presentations and proposals a month for clients and account managers</li>
                 <li>Control budgets assigned for the development of maintenance processes.</li>
               </ul>
             </div>
@@ -320,8 +320,8 @@
               <h5>2015 - 2018</h5>
               <p><b>Otis Elevator Company. Medellín, Colombia </b></p>
               <ul>
-                <li>Enforce corporate policies and procedures related to health and safety environment.</li>
-                <li>Follow up on the development of the company's annual audit plan and manage contractor personnel in environmental, health and safety matters.</li>
+                <li>Enforce corporate policies and procedures related to enviroment, health and safety.</li>
+                <li>Follow up to company's annual audit plan and manage contractor personnel in environmental, health and safety matters.</li>
                 <li>Develop training programs for technical and administrative personnel.</li>
                 <li>Participate in the coordination and implementation of management and quality assurance systems.</li>
               </ul>
@@ -501,7 +501,7 @@
 
         <div class="section-title">
           <h2>References</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -511,12 +511,12 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  XXXXXXXXXXXXXXXXXXXXXXX Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Julian is a person with a lot of skills and values that promote the objectives achievement in any Organization. Analytical thinking, Looking forward, Teamwork, Urgent sens, Hands on to highlight few on them. Julian is a trustworthy person in who we can give him any project.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="assets/img/testimonials/testimonials-1.jpeg" class="testimonial-img" alt="">
+                <h3>Liliana Moreno</h3>
+                <h4>Powering up people and driving results</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -524,12 +524,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Excelente ingeniero, buena planeación y ejecución de los proyectos que teniamos en su momento desde operaciones de campo.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets/img/testimonials/testimonials-2.jpeg" class="testimonial-img" alt="">
+                <h3>Alexander Cardenas</h3>
+                <h4>Gerente de Distrito OTIS CDMX</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -537,12 +537,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Persona comprometida con su trabajo, organizada, responsable, con muy buen manejo de personal a cargo y del cliente.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets/img/testimonials/testimonials-3.jpeg" class="testimonial-img" alt="">
+                <h3>Ramiro Gómez Villegas</h3>
+                <h4>Consultor Independiente</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -550,15 +550,15 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Es un profesional muy disciplinado cumplidor de sus funciones y preocupado por su desarrollo intelectual, investigador y solucionador de eventualidades difíciles de resolver pero al final cumplidor del objetivo.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <img src="assets/img/testimonials/testimonials-4.jpeg" class="testimonial-img" alt="">
+                <h3>Andrés Blanco</h3>
+                <h4>Ingeniero Mecánico</h4>
               </div>
             </div><!-- End testimonial item -->
-
+            <!--
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
@@ -585,7 +585,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -595,26 +595,26 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Calle 43 No 80B-50 Medellin, Antioquia, Colombia</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>julian.ramirez2507@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>3113770557</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
             </div>
 
           </div>
-
+          <!--
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
