--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="resume-item">
               <h4>Project Management Specialist <!--&amp; Graphic Design</h4>-->
               <h5>2011 - 2012</h5>
-              <p><em>Fundación Universitaria Esumen, Medellin, Colombia</em></p>
+              <p><em>Fundación Universitaria Esumer, Medellin, Colombia</em></p>
               <p>Project Management Specialist is able to formulate, evaluate and control the execution of public and private investment projects, by means of universally valid tools that allow to achieve competitive advantages in his own economic sector or in a sector close to his professional performance.</p>
             </div>
             <div class="resume-item">
