--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Julián Andrés Ramírez </h1>
+      <h1>Julián Andrés Ramírez Ramirez </h1>
       <p>I'm <span class="typed" data-typed-items="Electronic Engineer, Project Manager, Automation Specialist, Msc. Computational Science, Scrum Master SMCP, Scrum Product Owner"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -108,7 +108,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>40</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>42</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a rel="author" href="mailto:julian.ramirez2507@gmail.com/">julian.ramirez2507@gmail.com</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Available</span></li>
@@ -211,7 +211,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Artificial Intelligence <i class="val">30%</i></span>
+              <span class="skill">Artificial Intelligence <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -261,6 +261,13 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Full Stack Software Developer</h4>
+              <h5>2025</h5>
+              <p><em>4Geeks Academy Latam</em></p>
+              <p>Florida</p>
+              <p>Full Stack software developer with skills in JavaScript, Bootstrap, React, Flask, JWT, CSS, HTML, python, SQLAlchemy, Jest and others</p>
+            </div>
             <div class="resume-item">
               <h4>Master in Computational Sciences &amp; Telecomunications</h4>
               <h5>2021 - 2023</h5>
